<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_authorization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="58dp"
                android:text="@string/authorization"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="58dp"
                android:layout_marginBottom="15dp"
                android:text="@string/login"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/auth_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/tv_password"
                android:layout_width="92dp"
                android:layout_height="34dp"
                android:layout_gravity="center"

                android:layout_marginTop="20dp"

                android:layout_marginBottom="15dp"
                android:text="@string/password"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/auth_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auth_login" />

            <EditText
                android:id="@+id/auth_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:textAllCaps="true"
                tools:ignore="LabelFor" />


            <Button
                android:id="@+id/button_log_in"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/button_log_in"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_auth_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_registration"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>