<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_head_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/registration"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_reg_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/login"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/reg_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/reg_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="phone"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_reg_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_conf_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"

                android:layout_marginBottom="5dp"
                android:text="@string/password_confirmation"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/reg_conf_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="14sp"
                tools:ignore="LabelFor" />


            <Button
                android:id="@+id/button_reg_sign_up"
                style="@style/Animation.Design.BottomSheetDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/button_registration" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>